# snips-nlu-parsers

./: Cargo.toml
ffi/: Cargo.toml
ffi/ffi-macros/: Cargo.toml
python/ffi/: Cargo.toml
python/snips_nlu_parsers/tests/: test_builtin_entities.py
src/: utils.rs
src/builtin_entities/: examples.rs  parsable.rs  supported_languages.rs
src/conversion/: rustling.rs
