[package]
name = "snips-nlu-parsers"
version = "0.4.3"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[workspace]
members = [
    ".",
    "ffi",
    "ffi/ffi-macros",
    "python/ffi"
]

[dependencies]
failure = "0.1"
itertools = "0.8"
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gazetteer-entity-parser = { git = "https://github.com/tlverwijst/gazetteer-entity-parser", branch = "master" }
rustling-ontology = { git = "https://github.com/tlverwijst/rustling-ontology.git", branch = "master" }
snips-nlu-ontology = { git = "https://github.com/tlverwijst/snips-nlu-ontology", branch = "master" }
snips-nlu-utils = { git = "https://github.com/tlverwijst/snips-nlu-utils", branch = "master" }

[dev-dependencies]
tempfile = "3.0"
