[package]
name = "snips-nlu-parsers-ffi"
version = "0.4.3"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/tlverwijst/ffi-convert-rs.git", rev = "291ce1d" }
libc = "0.2"
snips-nlu-ontology = { git = "https://github.com/tlverwijst/snips-nlu-ontology", tag = "0.67.1" }
snips-nlu-ontology-ffi-macros = { git = "https://github.com/tlverwijst/snips-nlu-ontology", tag = "0.67.1" }
snips-nlu-parsers-ffi-macros = { path = "ffi-macros" }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
